<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <ImageView
                android:id="@+id/login_image_view"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/login_photo"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:scaleType="fitCenter"/>

            <EditText
                android:id="@+id/login_email_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_image_view"
                android:hint="@string/hintemail"
                android:inputType="textEmailAddress"
                android:background="@drawable/edittext"
                android:padding="6dp"
                android:drawableLeft="@drawable/email"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"/>

            <EditText
                android:id="@+id/login_password_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_email_view"
                android:hint="@string/hintpassword"
                android:inputType="textPassword"
                android:background="@drawable/edittext"
                android:padding="6dp"
                android:drawableLeft="@drawable/password"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"/>

            <Button
                android:id="@+id/login_button_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forget_password_text_view"
                android:layout_centerHorizontal="true"
                android:background="@drawable/loginbutton"
                android:textSize="24sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"
                android:text="@string/loginbutton"
                android:textColor="@android:color/background_light"/>

            <TextView
                android:id="@+id/forget_password_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgetPassword"
                android:layout_below="@+id/login_password_view"
                android:textStyle="bold"
                android:layout_alignParentRight="true"
                android:layout_marginRight="23dp"
                android:layout_marginTop="2dp"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_centerHorizontal="true"
                />

            <TextView
                android:id="@+id/Need_New_account_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/neednewaccount"
                android:layout_below="@+id/login_button_view"
                android:textStyle="bold"
                android:layout_marginRight="23dp"
                android:layout_marginTop="2dp"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_centerHorizontal="true"
                />


            <TextView
                android:id="@+id/login_using_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loginusingyour"
                android:layout_below="@+id/Need_New_account_text_view"
                android:textStyle="bold"
                android:layout_marginRight="23dp"
                android:layout_marginTop="2dp"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_centerHorizontal="true"
                />

            <Button
                android:id="@+id/phone_login_button_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_using_text_view"
                android:layout_centerHorizontal="true"
                android:background="@drawable/loginbutton"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"
                android:text="@string/Phonebutton"
                android:drawableLeft="@drawable/phone"
                android:textColor="@android:color/background_light"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>