<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActicvity">



    <ImageView
        android:id="@+id/register_image_view"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/signup_photo"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitCenter"/>

    <EditText
        android:id="@+id/register_email_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_image_view"
        android:hint="@string/hintemail"
        android:inputType="textEmailAddress"
        android:background="@drawable/edittext"
        android:padding="6dp"
        android:drawableLeft="@drawable/email"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"/>

    <EditText
        android:id="@+id/register_password_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_email_view"
        android:hint="@string/hintpassword"
        android:inputType="textPassword"
        android:background="@drawable/edittext"
        android:padding="6dp"
        android:drawableLeft="@drawable/password"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"/>

    <Button
        android:id="@+id/register_button_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_password_view"
        android:layout_centerHorizontal="true"
        android:background="@drawable/loginbutton"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:text="@string/createaccount"
        android:textColor="@android:color/background_light"/>

    <TextView
        android:id="@+id/Already_Have_account_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AlreadyHaveAccount"
        android:layout_below="@+id/register_button_view"
        android:textStyle="bold"
        android:layout_marginRight="23dp"
        android:layout_marginTop="2dp"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_centerHorizontal="true"
        />


</RelativeLayout>